Melhoria da API de Crédito para adequar às necessidades da Agrega.
